successfully created routes for signing in and signing out, using bcrypt so everything gets hashed and decrypted successfully. Next step is to be able to send out the JWT successfully as the user is created or has logged in

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "Naz and Phil",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.9.2"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.5",
+    "mongoose-bcrypt": "^1.6.0"
   }
 }
