--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.12.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-firebase-file-uploader": "^2.4.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
